--- a/src/assets/layouts/mainStyles.css
+++ b/src/assets/layouts/mainStyles.css
@@ -9,6 +9,28 @@
     color: #FFFFFF;
 }
 
+.main_btn {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    margin-top: 30px;
+    font-weight: 400;
+    font-size: 18px !important;
+    line-height: 25px !important;
+    color: #232323;
+    text-transform: none;
+    background: #fea31e !important;
+}
+
+.main_btn:hover {
+    color: white;
+    background: #8a5200 !important;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    font-size: 18px !important;
+    line-height: 25px !important;
+    filter: drop-shadow(1px 4px 10px rgba(255, 255, 255, 0.3));
+}
+
 * {
     font-family: 'MacPaw Fixel Display';
 }
@@ -31,16 +53,20 @@
 
 @media only screen and (min-width: 610px) {
     .componentSubtitle {
-        font-weight: 600;
-        font-size: 16px;
-        line-height: 140%;
-        color: #e20044;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 28px;
+        display: flex;
+        align-items: flex-end;
+        text-align: justify;
+        color: #FFFFFF;
     }
 
     .componentTitle {
-        font-weight: 600;
-        font-size: 38px;
-        line-height: 140%;
-        color: #ffffff;
+        font-weight: 500;
+        font-size: 48px;
+        line-height: 66px;
+        text-transform: uppercase;
+        color: #FFFFFF;
     }
 }
