--- a/src/assets/layouts/mainStyles.css
+++ b/src/assets/layouts/mainStyles.css
@@ -10,6 +10,7 @@
 }
 
 .main_btn {
+    transition: all 0.5s ease-in;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
     margin-top: 30px;
@@ -22,6 +23,7 @@
 }
 
 .main_btn:hover {
+    transition: all 0.5s ease-out;
     color: white;
     background: #8a5200 !important;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
